--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+img {
+  width: 40%;
+}
+
+main {
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+div {
+  margin: 1em 0em;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+button {
+  color: white;
+  background-color: rgb(200, 5, 5);
+  border-radius: 25px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button:hover {
+  color: rgb(200, 5, 5);
+  background-color: white;
+  border: 1px solid rgb(200, 5, 5);
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+h1 {
+  font-size: 100px;
+  background-color: darkorange;
+  display: inline;
+  box-shadow: 17px 10px 0px 2px rgb(5, 184, 224);
 }
